--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>mi perfil</title>
+    <title>mi perfil en bootstrap</title>
 </head>
 <header class="container tope">
     <div class="row">
+        
         <h1 class="col-4 tarjeta-nombre">Juan Carlos Gays</h1>
         <li class="col tarjeta">Home</li>
         <li class="col tarjeta">About</li>
