--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                     <p><b>Experience</b></p>
                     <ul>
                         <li class="cv">AySA									(Nov 2016 – Present)
-                        BUENOS AIRES, ARGENTINA
-                        International Financing Contract Manager 					(Jun 2018 – Present)
+                        BUENOS AIRES, ARGENTINA -
+                        <br>International Financing Contract Manager 					(Jun 2018 – Present)
                         <br>
                         Advisor, Finance & Procurement Dept. 					(Nov 2016 - Jun 2018)<br>
                         BUENOS AIRES, ARGENTINA
@@ -159,21 +159,38 @@
                     <p><b>Education</b>
                     <ul>
                         <li class="cv">Texas McCombs School of Business					(2000 - 2002)
-                        AUSTIN, TX, USA              MBA, Finance 
+                        AUSTIN, TX, USA    -         <b>MBA, Finance</b>  
                         </li>
                         <li class="cv">Instituto Tecnológico de Buenos Aires					(1990 - 1996)
-                        BUENOS AIRES, ARGENTINA
-                        BSIE, Industrial Engineering</li>
+                        BUENOS AIRES, ARGENTINA -
+                        <b>BSIE, Industrial Engineering</b></li>
                     </ul>
                     <br>
-                    <i>Certifications</i>
+                    <b>Certifications</b><br><br>
+                    
                     <ul>
-                        <li class="cv">Certified Project Cost Estimator - UTN Buenos Aires 					(2021)</li>
+                        <i>Project Management:</i>
+                        <li class="cv">Certified Project Cost Estimator - UTN Buenos Aires -					(2021) - Credential ID: <a href="./diplomas/Computo_ppto_obras.pdf">CER-22A5EVFB-621244</a></li>
                         <li class="cv">Prince2 Project Management - AXELOS Global Best Practice 				(2016)
                         Credential ID: 04169400-01-VI8V</li>
                         <li class="cv">Project Management Professional (PMP) - Project Management Institute (PMI)		(2010)
                             Credential ID: 1373630
                         </li>
+                        <i>Software development:</i>
+                        <li class="cv"> Web Development in Bootstrap -
+                            UTN Buenos Aires - (mar. 2023) -</li>
+                        <li class="cv"> Web Development in HTML 5, CSS3 & Javascript (advanced) -
+                            UTN Buenos Aires - (feb. 2023) -
+                            Credential ID: <a href="./diplomas/Desarrollo web en HTML 5, CSS3 y Javascript (nivel avanzado).pdf">CER-IRUQ8RHI-771502</a></li>
+                            <li class="cv"> Web Development in Javascript -
+                            UTN Buenos Aires - (dec. 2022) -
+                            Credential ID: <a href="./diplomas/Desarrollo Web con Javascript.pdf ">CER-GVINUAT6-771501</a></li>
+                            <li class="cv">Web Development in Html5 & Css3 - UTN Buenos Aires - (oct. 2022) -xpedición: oct. 2022 - Credential ID: <a href="./diplomas/Desarrollo Web en Html5 y Css3.pdf "> CER-QKV0RPFQ-771500 </a> </li>
+                            <li class="cv"> Python Certification (advanced) - UTN Buenos Aires - (feb. 2022 - aug. 2022) - Credential ID: <a href="./diplomas/Python_avanzado.pdf">CER-6RACRKYM-700714 </a>  </li>
+                           
+
+
+
                     </ul>
                     <br>
                     <p><i>Languages:</i> Spanish (100%), English (100%), Portuguese (50%)</p>
