--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                     <img class="col logoMedio" src="./imagenes/svg/Octicons-mark-github.svg" alt="Github">
                 </div>
                 <div class="row">
-                    <div class="col text-center">Bootstrap</div>
-                    <div class="col text-center">Css</div>
-                    <div class="col text-center">Github</div>
+                    <p class="col text-center">Bootstrap</p>
+                    <p class="col text-center">Css</p>
+                    <p class="col text-center">Github</p>
                 </div>
                 <br>
                 <div class="row">
@@ -83,9 +83,9 @@
                     <img class="col logoMedio" src="./imagenes/svg/Python-logo-notext.svg" alt="Python">
                 </div>
                 <div class="row">
-                    <div class="col text-center">HTML</div>
-                    <div class="col text-center">Javascript</div>
-                    <div class="col text-center">Python</div>
+                    <p class="col text-center">HTML</p>
+                    <p class="col text-center">Javascript</p>
+                    <p class="col text-center">Python</p>
                 </div>
           </div>
         </section>
