cambios en diplomas finales

--- a/index.html
+++ b/index.html
@@ -170,16 +170,19 @@
                     
                     <ul>
                         <i>Software development:</i>
+                        <li class="cv"> Professional Front End Developer -
+                            UTN Buenos Aires - (mar. 2023) -
+                            Credential ID: <a href="./diplomas/Profrontenddev.pdf">CER-K89ZY4RB-771499</a></li>
                         <li class="cv"> Web Development in Bootstrap -
                             UTN Buenos Aires - (mar. 2023) -</li>
                         <li class="cv"> Web Development in HTML 5, CSS3 & Javascript (advanced) -
                             UTN Buenos Aires - (feb. 2023) -
                             Credential ID: <a href="./diplomas/Desarrollo web en HTML 5, CSS3 y Javascript (nivel avanzado).pdf">CER-IRUQ8RHI-771502</a></li>
-                            <li class="cv"> Web Development in Javascript -
+                        <li class="cv"> Web Development in Javascript -
                             UTN Buenos Aires - (dec. 2022) -
                             Credential ID: <a href="./diplomas/Desarrollo Web con Javascript.pdf ">CER-GVINUAT6-771501</a></li>
-                            <li class="cv">Web Development in Html5 & Css3 - UTN Buenos Aires - (oct. 2022) -xpedición: oct. 2022 - Credential ID: <a href="./diplomas/Desarrollo Web en Html5 y Css3.pdf "> CER-QKV0RPFQ-771500 </a> </li>
-                            <li class="cv"> Python Certification (advanced) - UTN Buenos Aires - (feb. 2022 - aug. 2022) - Credential ID: <a href="./diplomas/Python_avanzado.pdf">CER-6RACRKYM-700714 </a>  </li>
+                        <li class="cv">Web Development in Html5 & Css3 - UTN Buenos Aires - (oct. 2022) -xpedición: oct. 2022 - Credential ID: <a href="./diplomas/Desarrollo Web en Html5 y Css3.pdf "> CER-QKV0RPFQ-771500 </a> </li>
+                        <li class="cv"> Python Certification (advanced) - UTN Buenos Aires - (feb. 2022 - aug. 2022) - Credential ID: <a href="./diplomas/Python_avanzado.pdf">CER-6RACRKYM-700714 </a>  </li>
                            
 <br><i>Project Management:</i>
                         <li class="cv">Certified Project Cost Estimator - UTN Buenos Aires -					(2021) - Credential ID: <a href="./diplomas/Computo_ppto_obras.pdf">CER-22A5EVFB-621244</a></li>
