agregado el proyecto waze

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                 
                 <a href='https://github.com/JuanCarlosGays/ENTREGA_FINAL' class="col text-center"><img  data-toggle="tooltip" data-placement="top" title="Python: ABM y Registro de socio, Gimnasio de barrio" class="logoGrande" src="./imagenes/svg/projects.svg" alt="gantt"/></a>
                 
+                <a href='https://github.com/JuanCarlosGays/Base_direcciones_waze' class="col text-center"><img  data-toggle="tooltip" data-placement="top" title="Python: estimador de distancias y tiempos via waze, puede calcular trayectos con origen fijo y con paradas" class="logoGrande" src="./imagenes/svg/projects.svg" alt="gantt"/></a>
             </div>
             <br>
         </section>
